[gd_scene load_steps=10 format=3 uid="uid://cifr7f5pbfxlo"]

[ext_resource type="Texture2D" uid="uid://28oajk16a6v6" path="res://assets/gamescreen.png" id="1_2nkfn"]
[ext_resource type="Script" path="res://CreateChallenge/index.gd" id="1_5rbuh"]
[ext_resource type="Texture2D" uid="uid://bv142d00uvou4" path="res://assets/gems.png" id="2_j04o7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_44wvu"]
texture = ExtResource("2_j04o7")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0

[sub_resource type="TileSet" id="TileSet_awens"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_44wvu")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i1jps"]
texture = ExtResource("2_j04o7")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0

[sub_resource type="TileSet" id="TileSet_bfr1o"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_i1jps")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tyyol"]
texture = ExtResource("2_j04o7")
texture_region_size = Vector2i(32, 32)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_twrtq"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_tyyol")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_5rbuh")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1344.0
offset_bottom = 672.0
texture = ExtResource("1_2nkfn")
metadata/_edit_lock_ = true

[node name="TargetGemTileMap" type="TileMap" parent="."]
position = Vector2(864, 128)
tile_set = SubResource("TileSet_awens")
format = 2
layer_0/name = "BORDER"
layer_0/tile_data = PackedInt32Array(-1, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, 262143, 262144, 0, 327679, 262144, 0, 393215, 262144, 0, 458751, 262144, 0, 393216, 262144, 0, 393217, 262144, 0, 393218, 262144, 0, 393219, 262144, 0, 393220, 262144, 0, 393221, 262144, 0, 393222, 262144, 0, -65530, 262144, 0, 6, 262144, 0, 65542, 262144, 0, 131078, 262144, 0, 196614, 262144, 0, 262150, 262144, 0, 327686, 262144, 0, -65536, 262144, 0, -65535, 262144, 0, -65534, 262144, 0, -65533, 262144, 0, -65532, 262144, 0, -65531, 262144, 0, 65535, 262144, 0)
layer_1/name = "PLACED_PIECES"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
layer_2/name = "CURRENT_PIECE"
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array()

[node name="CheckButton" type="CheckButton" parent="."]
offset_left = 32.0
offset_top = 32.0
offset_right = 352.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 24
text = "Use Random Shapes"

[node name="ShapesTileMap" type="TileMap" parent="."]
position = Vector2(32, 96)
tile_set = SubResource("TileSet_bfr1o")
format = 2
layer_0/name = "SHAPES_LAYER"

[node name="QueueTileMap" type="TileMap" parent="."]
position = Vector2(576, 128)
tile_set = SubResource("TileSet_twrtq")
rendering_quadrant_size = 32
format = 2
layer_0/name = "BORDER"
layer_0/tile_data = PackedInt32Array(-1, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, 262143, 262144, 0, 327679, 262144, 0, 393215, 262144, 0, 458751, 262144, 0, 393222, 262144, 0, 327686, 262144, 0, 262150, 262144, 0, 196614, 262144, 0, 131078, 262144, 0, 65542, 262144, 0, 6, 262144, 0, -65530, 262144, 0, -65531, 262144, 0, -65532, 262144, 0, -65533, 262144, 0, -65534, 262144, 0, -65535, 262144, 0, -65536, 262144, 0, 65535, 262144, 0, 524287, 262144, 0, 589823, 262144, 0, 655359, 262144, 0, 720895, 262144, 0, 786431, 262144, 0, 851967, 262144, 0, 786432, 262144, 0, 786433, 262144, 0, 786434, 262144, 0, 786435, 262144, 0, 786436, 262144, 0, 786437, 262144, 0, 786438, 262144, 0, 720902, 262144, 0, 655366, 262144, 0, 589830, 262144, 0, 524294, 262144, 0, 458758, 262144, 0)
layer_1/name = "QUEUE"
layer_1/tile_data = PackedInt32Array()

[node name="Label" type="Label" parent="QueueTileMap"]
offset_left = -32.0
offset_top = -64.0
offset_right = 224.0
offset_bottom = -41.0
text = "Queue"
horizontal_alignment = 1

[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
